Updated .env file

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-TOKEN = MTEyODkwMzQ5Mjg0OTkwOTg5MA.GXk6zP.WbFzjdRg7eGr8OqXSAA6Rudud3BVLMt4DRzwF4
+TOKEN = MTEyODkwMzQ5Mjg0OTkwOTg5MA.GMyMcw.WcAxgv1z8OeAfNsgKLMhAwSKdGnGvBGj5sf3HM
