--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Caden",
   "license": "ISC",
   "dependencies": {
+    "bayes": "^1.0.0",
     "discord.js": "^14.11.0",
     "dotenv": "^16.3.1"
   }
